--- a/client/games.html
+++ b/client/games.html
@@ -23,10 +23,11 @@
     <script type="text/javascript" src="javascript/jquery-1.7.2.js"></script>
     <script type="text/javascript" src="javascript/jquery-ui-1.8.21.custom.min.js"></script>
     <script type="text/javascript" src="javascript/games.js"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster">
   </head>
-  <body>
+  <body class="gamesBody">
+    <div class="gamesTitle"> Hey Kellie, want to play scrabble? </div>
     <fieldset>
-      <legend>Choose a game and player to play</legend>
       <table>
       </table>
     </fieldset>
