--- a/client/games.html
+++ b/client/games.html
@@ -31,6 +31,8 @@
       <table>
       </table>
     </fieldset>
-    <div class="gamesSubtitle">Kellie 1 - 0 Geoff</div>
+    <div class="gamesSubtitle">Kellie 1 - 1 Geoff</div>
+    <span class="reigningChamp">Reigning Champ: Geoff</span>
+    <div class="fireworks"></div>
   </body>
 </html>
