--- a/client/games.html
+++ b/client/games.html
@@ -31,8 +31,8 @@
       <table>
       </table>
     </fieldset>
-    <div class="gamesSubtitle">Kellie 1 - 1 Geoff</div>
-    <span class="reigningChamp">Reigning Champ: Geoff</span>
-    <div class="fireworks"></div>
+    <div class="gamesSubtitle">Kellie 2 - 1 Geoff</div>
+    <span class="reigningChamp">Reigning Champ: Kellie</span>
+    <!-- <div class="fireworks"></div> -->
   </body>
 </html>
