--- a/client/games.html
+++ b/client/games.html
@@ -31,8 +31,10 @@
       <table>
       </table>
     </fieldset>
-    <div class="gamesSubtitle">Kellie 2 - 1 Geoff</div>
-    <span class="reigningChamp">Reigning Champ: Kellie</span>
-    <!-- <div class="fireworks"></div> -->
+    <div class="gamesSubtitle">Kellie 2 - 2 Geoff</div>
+    <span class="reigningChamp">Reigning Champ: Geoff</span>
+		<div class="fireworks fone"></div>
+		<div class="fireworks"></div>
+		<div class="fireworks fthree"></div>
   </body>
 </html>
